added integration test to github actions

--- a/.github/workflows/ci-cd-python-actions.yml
+++ b/.github/workflows/ci-cd-python-actions.yml
@@ -48,7 +48,4 @@ jobs:
         run: |
           heroku container:push web -a nomadic-brian-lab
           heroku container:release web -a nomadic-brian-lab
-
-      - name: Test on heroku with pytest
-        run: |
-          pytest src/test_integration.py -v
+          heroku pytest src/ test_integration.py -V
