--- a/.github/workflows/ci-cd-python-actions.yml
+++ b/.github/workflows/ci-cd-python-actions.yml
@@ -48,4 +48,4 @@ jobs:
         run: |
           heroku container:push web -a nomadic-brian-lab
           heroku container:release web -a nomadic-brian-lab
-          heroku pytest src/ test_integration.py -V
+          heroku pytest src/test_integration.py -v
